# chillbox

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README-cli.md  README.md  VERSION  Vagrantfile  alpine-box-init.sh.tftpl  ansible.sh  build-artifacts.sh  chillbox.sh  chillbox.tf  init-sites.sh  local-chillbox.sh  local-shared-secrets.Dockerfile  main.tf  nginx.conf  notes.txt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  site.json  site.schema.json  terra.sh  terraform-010-infra.Dockerfile  terraform-020-chillbox.Dockerfile  terraform-030-artifact-modules.Dockerfile  test.sh  todo.txt  todos.md  update-dep.Dockerfile  update-dep.sh  upload-artifacts.sh  upload-version.sh  (+2 more)
.github/: FUNDING.yml
chillbox-server/: .dockerignore  .gitignore  Makefile  README.md  VERSION  build-sites-artifact.sh  example-chillbox.toml  pip-requirements.txt  pip-tools-requirements.txt  register-certbot-account.sh  requirements.txt
docs/: README.md  chillbox.md  configuration-file.md  features.md  guide.md  quickstart.md  site-service-contract.md
exp/: chillbox-machine.js  doit.sh  qemu.sh  sm.js
experiments/: qemu.sh
experiments/isolate/: .gitignore  example.chillbox.toml  pyproject.toml  sq.py  tasks-gpg.py
experiments/isolate/docs/: configuration-file.md
experiments/isolate/src/chillbox/: __init__.py  errors.py  main.py  tasks.py  utils.py  validate.py
experiments/isolate/src/chillbox/data/: __init__.py  commands-info.toml
experiments/isolate/src/chillbox/data/scripts/: encrypt-file  generate-new-chillbox-keys
experiments/isolate/src/chillbox/data/templates/: chillbox.nft  user-data.sh.jinja
experiments/isolate/src/chillbox/data/templates/scripts/: create-asymmetric-key  encrypt-file
experiments/isolate/src/chillbox/tasks/: __init__.py  gpg.py  init.py  local_archive.py  local_checks.py  local_env.py  local_ssh.py  server.py  validate.py
local-bin/: _docker_build_terraform-010-infra.sh  _docker_build_terraform-020-chillbox.sh  _generate-site_domains_auto_tfvars.sh  build-artifacts.sh  chillbox.sh  clean.sh  encrypt-and-upload-secrets.sh  pull-terraform-tfstate.sh  push-terraform-tfstate.sh  verify-sites-artifact.sh
old_sh/: README.md  chillbox.sh
sites/: bunnypoop.site.json  jengalaxyart.site.json  jengalaxyart.site.yaml
src/: s3-download-gpg_pubkeys.Dockerfile  s3-upload-encrypted-secrets.Dockerfile  s3-wrapper.Dockerfile
templates/: chillbox.nginx.conf.template  jengalaxyart.nginx.conf.template.disabled
terraform/: main.tf  (+3 more)
terraform-010-infra/: .dockerignore  Dockerfile  main.tf  variables.tf
terraform-020-chillbox/: .dockerignore  .terraform.lock.hcl  Dockerfile  alpine-box-init.sh.tftpl  chillbox.tf  extract-terraform-artifact-modules.sh  generate-site_domains_auto_tfvars.sh  main.tf  outputs.tf  upload-artifacts.sh  user_data_chillbox.sh.tftpl  variables.tf
terraform-bin/: _decrypt_file_as_dev_user.sh  _doterra-init-gpg-key.sh  _doterra_as_dev_user.sh  _doterra_state_pull_as_dev_user.sh  _doterra_state_push_as_dev_user.sh  (+7 more)
(+271 files in other folders)
