[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chillbox"
dynamic = ['version']
description = "chillbox description TODO"
readme = "README.md"
license.text = "LGPLv3+"
requires-python = ">=3.8, <4"
authors = [
    { name = "Jake Hickenlooper", email = "jake@weboftomorrow.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "invoke>=2",
  "tomli >= 1.1.0 ; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/jkenlooper/chill"

[project.optional-dependencies]

test = [
    "coverage",
    "pytest",
]
dev = [
]

[project.scripts]
chillbox = "chillbox.main:program.run"


[tool.hatch.version]
path = "src/chillbox/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.bandit]
exclude_dirs = [
]
