[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chillbox"
dynamic = ['version']
description = "Deployment scripts for websites that use Chill and custom Python services. Work in Progress "
readme = "README.md"
license.text = "AGPLv3+"
requires-python = ">=3.8, <4"
authors = [
    { name = "Jake Hickenlooper", email = "jake@weboftomorrow.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "invoke>=2",
  "tomli >= 1.1.0 ; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/jkenlooper/chillbox"

[project.optional-dependencies]

test = [
    "coverage",
    "pytest",
]
dev = [
]

[project.scripts]
chillbox = "chillbox.main:main"


[tool.hatch.version]
path = "src/chillbox/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.bandit]
exclude_dirs = [
]
